--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,12 @@
 <div class="row">
   <div class="col-xl-12">
-    <img src="" alt="">
+    <img [src]="recipe.imagePath" alt="{{recipe.name}}"
+    style="max-height:300px">
   </div>
 </div>
 <div class="row">
   <div class="col-xl-12">
-    <h1>Recipe Name</h1>
+    <h1>{{recipe.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -23,7 +24,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xl-12">Description</div>
+  <div class="col-xl-12">{{recipe.description}}</div>
 </div>
 <div class="row">
   <div class="col-xl-12">Ingredients</div>
