--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,20 +7,12 @@
 <div class="row">
     <div class="col-xl-12">
         <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let recipe of recipes">
-                <div class="d-flex w-100 justify-content-between">
-                    <div>
-                        <h5 class="mb-1">{{recipe.name}}</h5>
-                        <p class="mb-1">{{recipe.description}}</p>
-                    </div>
-                    <span>
-                        <!-- <img src="{{recipe.imagePath}}" alt="{{recipe.description}}" style="max-height: 50px;"> -->
-                        <img [src]="recipe.imagePath" alt="{{recipe.description}}" style="max-height: 50px;">
-                    </span>
-                </div> 
-            </a>
+            <!-- Binding the recipeEl to recipe property -->
+            <app-recipe-item 
+                *ngFor="let recipeEl of recipes" 
+                [recipe]="recipeEl"
+                (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
         </div>
-        <app-recipe-item></app-recipe-item>
     </div>
 </div>
 
