--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -10,8 +10,7 @@
             <!-- Binding the recipeEl to recipe property -->
             <app-recipe-item 
                 *ngFor="let recipeEl of recipes" 
-                [recipe]="recipeEl"
-                (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
+                [recipe]="recipeEl"></app-recipe-item>
         </div>
     </div>
 </div>
