--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,7 @@
           Manage Recipe
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Add To Cart</a>
+          <a class="dropdown-item" (click)="onAddToShoppingList()" style="cursor:pointer">Add To Shopping List</a>
           <a class="dropdown-item" href="#">Edit Recipe</a>
           <a class="dropdown-item" href="#">Delete Recipe</a>
         </div>
@@ -27,5 +27,11 @@
   <div class="col-xl-12">{{recipe.description}}</div>
 </div>
 <div class="row">
-  <div class="col-xl-12">Ingredients</div>
+  <div class="col-xl-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+    </ul>
+  </div>
 </div>
