--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,9 @@
 <p>  users component works! </p>
+<p>User List:</p>
+<!-- Here, using array, we can pass path parameters -->
+<a [routerLink]="['/users', 1, 'Ocean']">Load Ocean</a><br>
+<a [routerLink]="['/users', 2, 'Life']">Load Life</a><br>
+<a [routerLink]="['/users', 3, 'Simple']">Load Simple</a>
+
 <hr>
-<app-user></app-user>
+<router-outlet></router-outlet>
