--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,3 @@
-<p>
-  servers works!
-</p>
+<p> servers works! </p>
+<input type="text" [(ngModel)]="serverName"><br><br>
+<button class="btn btn-primary" (click)="updateServer()"> Update Server</button>
