--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <p>
   home works!
 </p>
-<button class="btn btn-primary" (click)="loadServerByPathParameters()">
-  Load server programmatically (Path Params)
+<button class="btn btn-primary" (click)="loadServerProgramatically()">
+  Load server programmatically
 </button>
 <br><br>
 <a [routerLink]="['/servers', 5, 'edit']"
