--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,22 +5,21 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes <span class="sr-only">(current)</span></a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/recipes">Recipes <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
             </li>            
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown" appDropdown>
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" style="cursor:pointer" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Manage
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" style="cursor:pointer">Save Data</a>
+                <a class="dropdown-item" style="cursor:pointer">Fetch Data</a>
                 </div>
             </li>
         </ul>
