--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" (click)="onSelected()"class="list-group-item list-group-item-action flex-column align-items-start">
+<a style="cursor: pointer" [routerLink]="[index]" routerLinkActive="active" class="list-group-item list-group-item-action flex-column align-items-start">
   <div class="d-flex w-100 justify-content-between">
       <div>
           <h5 class="mb-1">{{recipe.name}}</h5>
