--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xl-12">
-        <button type="button" class="btn btn-success">New Recipe</button>
+        <button type="button" class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
     </div>
 </div>
 <hr>
@@ -9,8 +9,8 @@
         <div class="list-group">
             <!-- Binding the recipeEl to recipe property -->
             <app-recipe-item 
-                *ngFor="let recipeEl of recipes" 
-                [recipe]="recipeEl"></app-recipe-item>
+                *ngFor="let recipeEl of recipes; let i = index" 
+                [recipe]="recipeEl" [index]="i"></app-recipe-item>
         </div>
     </div>
 </div>
