--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,20 +1,21 @@
 <div class="row">
   <div class="col-xl-12">
-      <form>
+      <form (ngSubmit)="onSubmit(shoppingEditForm)" #shoppingEditForm="ngForm"> 
         <div class="form-row">
           <div class="form-group col-sm-5">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Name" #nameInput>
+            <input type="text" class="form-control" id="name" placeholder="Name" name="name" ngModel required>
           </div>
           <div class="form-group col-sm-2">
             <label for="amount">Amount</label>
-            <input type="number" class="form-control" id="amount" placeholder="Amount" #amountInput>
+            <!-- Pattern for greater than 0 -->
+            <input type="number" class="form-control" id="amount" placeholder="Amount" name="amount" ngModel required pattern="^[1-9]+[0-9]*$">
           </div>
         </div>
         <div class="form-row">
-            <button type="submit" class="btn btn-success mr-1 ml-1" (click)="onAddItem()">Add</button>
-            <button type="button" class="btn btn-danger mr-1">Delete</button>
-            <button type="button" class="btn btn-primary mr-1">Clear</button>
+            <button type="submit" class="btn btn-success mr-1 ml-1" [disabled]="!shoppingEditForm.valid">{{ editMode ? 'Update' : 'Add'}}</button>
+            <button type="button" class="btn btn-danger mr-1" (click)="onDelete()" *ngIf="editMode">Delete</button>
+            <button type="button" class="btn btn-primary mr-1" (click)="onClear()">Clear</button>
         </div>
       </form>
   </div>
