--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -38,7 +38,7 @@
       </div>
       <div class="row">
         <div class="col-xl-12" formArrayName="ingredients">
-          <div class="row mt-2" *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index" [formGroupName]="i">
+          <div class="row mt-2" *ngFor="let ingredientCtrl of getControls(); let i = index" [formGroupName]="i">
             <div class="col-xl-8">
               <input type="text" class="form-control" formControlName="name">
             </div>
