--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,7 @@
       <app-shopping-edit></app-shopping-edit>
       <hr>
       <div class="list-group">
-          <a style="cursor: pointer" class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let ingredient of ingredients; let i = index" (click)="onEditItem(i)">
+          <a style="cursor: pointer" class="list-group-item list-group-item-action flex-column align-items-start" *ngFor="let ingredient of (shoppingListState | async).ingredients; let i = index" (click)="onEditItem(i)">
             {{ingredient.name}} ({{ingredient.amount}})
           </a>
       </div>
