--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -13,7 +13,7 @@
             </li>            
         </ul>
         <ul class="navbar-nav ml-auto">
-            <ng-template [ngIf]="!isAuthenticated()">
+            <ng-template [ngIf]="!(authState | async).authenticated">
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="/signup">Register</a>
                 </li>
@@ -21,10 +21,10 @@
                     <a class="nav-link" routerLink="/signin">Login</a>
                 </li>
             </ng-template>
-            <li class="nav-item" routerLinkActive="active" *ngIf="isAuthenticated()">
+            <li class="nav-item" routerLinkActive="active" *ngIf="(authState | async).authenticated">
                 <a style="cursor:pointer" class="nav-link" (click)="onLogout()">Logout</a>
             </li>
-            <li class="nav-item dropdown" appDropdown *ngIf="isAuthenticated()">
+            <li class="nav-item dropdown" appDropdown *ngIf="(authState | async).authenticated">
                 <a class="nav-link dropdown-toggle" style="cursor:pointer" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Manage
                 </a>
