--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-xl-12">
-    <img [src]="recipe.imagePath" alt="{{recipe.name}}"
+    <img [src]="(recipeState | async).recipes[id].imagePath" alt="{{(recipeState | async).recipes[id].name}}"
     style="max-height:300px">
   </div>
 </div>
 <div class="row">
   <div class="col-xl-12">
-    <h1>{{recipe.name}}</h1>
+    <h1>{{(recipeState | async).recipes[id].name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -24,12 +24,12 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xl-12">{{recipe.description}}</div>
+  <div class="col-xl-12">{{(recipeState | async).recipes[id].description}}</div>
 </div>
 <div class="row">
   <div class="col-xl-12">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+      <li class="list-group-item" *ngFor="let ingredient of (recipeState | async).recipes[id].ingredients">
         {{ingredient.name}} - {{ingredient.amount}}
       </li>
     </ul>
