--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,7 +9,7 @@
         <div class="list-group">
             <!-- Binding the recipeEl to recipe property -->
             <app-recipe-item 
-                *ngFor="let recipeEl of recipes; let i = index" 
+                *ngFor="let recipeEl of (recipeState | async).recipes; let i = index" 
                 [recipe]="recipeEl" [index]="i"></app-recipe-item>
         </div>
     </div>
